--- a/boselecta/assets/css/core.css
+++ b/boselecta/assets/css/core.css
@@ -51,13 +51,6 @@ section,
 .splash{
     max-width: 100%;
 }
-.content{
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-#journal .content{
-    padding-right: 0;
-}
 /*/////////////////////////*/
 @media (min-width: 1440px) {
     header{
@@ -84,8 +77,8 @@ section,
         display: none;
     }
     .container{
-        padding-left: 1rem;
-        padding-right: 1rem;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 /*//////////////////////////////////////////////////*/
