--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -221,11 +221,15 @@ footer{
     padding-top: 4rem;
     padding-bottom: 8rem;
 }
+.content,
 header,
 .heading,
 .container{
     padding-left: 2rem; 
     padding-right: 2rem;
+}
+#journal .content{
+    padding-right: 0;
 }
 .heading{
     padding-bottom: 2rem;
@@ -260,6 +264,7 @@ header .language a,
     }
 }
 @media (max-width: 768px) {
+    .content
     header,
     .heading,
     .container,
@@ -272,6 +277,10 @@ header .language a,
     header,
     .heading,
     .container,
+    .content{
+        padding-left: 0;
+        padding-right: 0;
+    }
     body{
         padding-left: 1.25rem;
         padding-right: 1.25rem;
