--- a/boselecta/assets/css/core.css
+++ b/boselecta/assets/css/core.css
@@ -275,11 +275,23 @@ width: 25%;
     }
     #journal .flex .col{
         max-width: 68%; 
+    }
 }
+
 /*//////////////////////////////////////////////////*/
 /* SHOWCASE */
 /*//////////////////////////////////////////////////*/
-#showcase .img{
-    aspect-ratio: 2/0.6;
+.img-wrap {
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    overflow-x: auto;
 }
-
+.img-wrap img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    transition: transform 0.3s ease-in-out; /* Smooth transition */
+}
