--- a/ebisu/assets/css/styles.css
+++ b/ebisu/assets/css/styles.css
@@ -447,7 +447,7 @@ footer .img{
 }
 /*//////////////////////////////////////////////////*/
 .logo{
-    background-image: url(../img/log.svg);
+    background-image: url(../img/logo.png);
 }
 /*/////////////////////////*/
 #hero .img{
