--- a/ebisu/assets/css/styles.css
+++ b/ebisu/assets/css/styles.css
@@ -468,7 +468,7 @@ footer .img{
 }
 /*/////////////////////////*/
 #details .img{
-    background-image: url(../img/details1.png);
+    background-image: url(../img/about.png);
 }
 /*/////////////////////////*/
 #testimonials .col:nth-child(1) .img{
