--- a/ebisu/assets/css/styles.css
+++ b/ebisu/assets/css/styles.css
@@ -482,7 +482,7 @@ footer .img{
 }
 /*/////////////////////////*/
 footer .img{
-    background-image: url(../img/lineQR.png);
+    background-image: url(../img/QR.png);
 }
 .line:before{
     background-image: url(../img/line-logo.svg);
