--- a/ebisu/assets/css/core.css
+++ b/ebisu/assets/css/core.css
@@ -70,11 +70,17 @@ header,
 /*//////////////////////////////////////////////////*/
 .button{
     display: inline-block;
-    text-align: center;
+    align-items: center;
     text-decoration: none;
     border: none;
     cursor: pointer;
     transition: all 0.3s ease;
+    width: auto; /* Ensures natural width */
+    flex: 0 0 auto;
+}
+.button .material-icons{
+    float: left;
+    margin-right: 8px;
 }
 .button:hover {
     transform: translateY(-3px); /* Lift effect */
