--- a/boselecta/assets/css/core.css
+++ b/boselecta/assets/css/core.css
@@ -21,9 +21,51 @@ footer,
 section{
     width: 100%;
 }
+section,
+.heading,
+.container{
+    max-width: 896px;
+    margin: 0 auto;
+}
+.splash{
+    max-width: 100%;
+}
+/*/////////////////////////*/
+@media (max-width: 1024px) {
+    .container{
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+}
+/*/////////////////////////*/
+@media (max-width: 440px) {
+    .container{
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+/*//////////////////////////////////////////////////*/
+/* QUOTE */
+/*//////////////////////////////////////////////////*/
+blockquote {
+    font-style: italic;
+    font-size: 1.2em;
+    color: #555;
+    padding: 10px 20px;
+    border-left: 4px solid #ccc;
+    margin: 20px 0;
+}
+blockquote p{
+    margin: 0!important;
+}
+/*//////////////////////////////////////////////////*/
+/* HEADER */
+/*//////////////////////////////////////////////////*/
 header{
     width: 1360px;
     margin: 0 auto;
+}
+.page-index header{
     position: fixed;
     top: 0;
     left: 0;
@@ -42,14 +84,15 @@ header h1 span{
     font-size: 40px;
     display: block;
 }
-section,
-.heading,
-.container{
-    max-width: 896px;
-    margin: 0 auto;
-}
-.splash{
-    max-width: 100%;
+header .close{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 /*/////////////////////////*/
 @media (min-width: 1440px) {
@@ -65,25 +108,15 @@ section,
     }
 }
 /*/////////////////////////*/
-@media (max-width: 1024px) {
-    .container{
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
-}
-/*/////////////////////////*/
 @media (max-width: 440px) {
     header{
         display: none;
-    }
-    .container{
-        padding-left: 0;
-        padding-right: 0;
     }
 }
 /*//////////////////////////////////////////////////*/
 /* FLEX */
 /*//////////////////////////////////////////////////*/
+.btns,
 .flex{
     display: flex;
     flex-wrap: wrap;
@@ -113,6 +146,7 @@ section,
 /*//////////////////////////////////////////////////*/
 .button{
     display: inline-block;
+    align-items: center;
     text-align: center;
     text-decoration: none;
     border: none;
@@ -125,13 +159,20 @@ section,
 .button:active {
     transform: translateY(0); /* Button returns to normal position */
 }
-.button:disabled {
-    background-color: #b0c4de; /* Light greyish blue */
-    cursor: not-allowed;
-    opacity: 0.6;
-}
 #lang.button:hover{
     transform: none;
+}
+.btns{
+    align-items: center;
+}
+.btns a:nth-child(2){
+    padding: 0!important;
+    border: 0;
+}
+.btns a:nth-child(2) i{
+    width: 36px;
+    height: 36px;
+    font-size: 36px!important;
 }
 /*//////////////////////////////////////////////////*/
 /* IMAGE */
@@ -293,4 +334,26 @@ width: 25%;
     width: auto;
     height: 100%;
     transition: transform 0.3s ease-in-out; /* Smooth transition */
+}
+/*//////////////////////////////////////////////////*/
+/* ABOUT */
+/*//////////////////////////////////////////////////*/
+#top{
+    width: 800px;
+}
+#about{
+    width: 1180px;
+}
+#about p{
+    line-height: 160%;
+}
+#about .col1{
+    width: 60%;
+}
+#about .col2{
+    width: 32%;
+}
+#about ul li{
+    list-style-type: none;
+    margin-bottom: 0.5rem;
 }
