--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -9,6 +9,7 @@
     --invert-secondary-color: #29444C;
     --text-color: #444;
     --light-text-color: #666;
+    --border-color: #CCC;
     --invert-text-color: #E6E0D0;
     /* Dark Mode */
     /*--primary-color: #88A4AA;
@@ -26,7 +27,10 @@ body,
 a{
     color: var(--text-color);
 }
-.brand h1,
+blockquote {
+    color: var(--light-text-color);
+}
+header .close,
 .page-index .button,
 .page-index .bg-intro,
 .page-index,
@@ -38,6 +42,9 @@ a{
 .casestudy a{
     color: #ECECE4;
 }
+.brand h1{
+    color: #FFF;
+}
 /*/////////////////////////*/
 @media (max-width: 1024px) {
 
@@ -47,11 +54,13 @@ a{
 .heading p{
     opacity: 68%;  
 }
-#showcase .heading,
-#journal .heading,
-#casestudy .heading,
 #intro .button,
 #intro p{
+    opacity: 40%;
+}
+#showcase .heading,
+#journal .heading,
+#casestudy .heading{
     opacity: 24%;
 }
 /*//////////////////////////////////////////////////*/
@@ -64,6 +73,10 @@ a{
     text-decoration: underline;
 }*/
 /*//////////////////////////////////////////////////*/
+blockquote {
+    font-style: italic;
+}
+/*//////////////////////////////////////////////////*/
 .button{
     font-weight: bold;
 }
@@ -75,6 +88,7 @@ a{
 /*//////////////////////////////////////////////////*/
 /* BORDER COLOR */
 /*//////////////////////////////////////////////////*/
+blockquote,
 .button.outline{
     border-style: solid;
 }
@@ -85,12 +99,18 @@ a{
 header .language a{
     border-width: 0 0 1px 0;
 }
+blockquote{
+    border-width: 0 0 0 4px;
+}
 /*/////////////////////////*/
 .button.outline{
     border-color: var(--text-color);
 }
 .page-index .button.outline{
     border-color: var(--invert-text-color);
+}
+blockquote {
+    border-color: var(--border-color);
 }
 header .language a{
     border-color: rgba(255, 255, 255, 0.25);
@@ -123,6 +143,7 @@ header .language a,
 body{
     background-color: var(--background-color);
 }
+header .close,
 .page-index body{
     background-color: var(--invert-primary-color);
 }
@@ -130,6 +151,7 @@ body{
     background-color: var(--invert-secondary-color);
 }
 /*/////////////////////////*/
+#about .img,
 .button.outline{
     background-color: transparent!important;
 }
@@ -165,6 +187,7 @@ body{
 /*//////////////////////////////////////////////////*/
 /* BORDER RADIUS */
 /*//////////////////////////////////////////////////*/
+header .close,
 header h1 span,
 .button{
     border-radius: 1000px;
@@ -209,19 +232,22 @@ header h1 span,
 /*//////////////////////////////////////////////////*/
 /* SPACING */
 /*//////////////////////////////////////////////////*/
+blockquote {
+    padding: 0.75rem 1.25rem;
+}
+#entry .container,
 section{
     padding-top: 8rem;
     padding-bottom: 4rem;
 }
+.page-about #intro,
+footer,
 #showcase{
     padding-top: 4rem;
 }
+footer,
 #journal .flex{
     padding-bottom: 4rem;
-}
-footer{
-    padding-top: 4rem;
-    padding-bottom: 8rem;
 }
 .content,
 header,
@@ -257,6 +283,10 @@ header .language a,
 }
 .language.button{
     padding: 0;
+}
+.page-journal #intro,
+#about{
+    padding-top: 1rem;
 }
 /*/////////////////////////*/
 @media (max-width: 1024px) {
@@ -309,12 +339,16 @@ header .language a,
 .heading{
     margin-bottom: 2rem;
 }
+blockquote,
 #journal .flex,
 h1,
 h2,
 h3{
     margin-bottom: 1.5rem;
 }
+ul,
+h4,
+h5,
 .img-wrap,
 .img,
 p{
@@ -338,9 +372,13 @@ footer .heading{
 }
 }
 /*//////////////////////////////////////////////////*/
+#about{
+    gap: 4rem;
+}
 .flex{
     gap: 2rem;
 }
+.btns,
 header nav,
 header{
     gap: 1rem;
@@ -372,6 +410,10 @@ body {
 /*/////////////////////////*/
 #intro p{
     font-weight: bold;
+}
+/*/////////////////////////*/
+#entry h4{
+    text-transform: uppercase;
 }
 /*/////////////////////////*/
 .casestudy p,
@@ -436,6 +478,9 @@ h4{
 #intro p{
     font-size: 1.5rem;
 }
+blockquote{
+    font-size: 1.25rem;
+}
 p,
 li,
 dd,
@@ -469,9 +514,14 @@ small{
     width: 100%;
     aspect-ratio: 16/9;
 }
+#entry .col .img,
 #journal .img{
     aspect-ratio: 1/1;
 }
+#about .img{
+    aspect-ratio: 16/13;
+}
+.heading.narrow .img,
 .img-wrap {
     aspect-ratio: 2.35/1;
 }
@@ -525,6 +575,12 @@ small{
 }
 .userflow{
     background-image: url(../img/journal-userflow.png);
+}
+#about .col1 .img{
+    background-image: url(../img/about-skills.png);
+}
+#about .col2 .img{
+    background-image: url(../img/about.png);
 }
 /*//////////////////////////////////////////////////*/
 
