--- a/boselecta/assets/css/core.css
+++ b/boselecta/assets/css/core.css
@@ -11,6 +11,10 @@
 html{
     scroll-behavior: smooth;
 }
+html,
+body{
+    overflow-x: hidden;
+}
 ul{
     list-style-position: inside;
 }
@@ -168,6 +172,11 @@ header .close{
     width: 36px;
     height: 36px;
     font-size: 36px!important;
+}
+.btns.sm a:nth-child(2) i{
+    width: 24px;
+    height: 24px;
+    font-size: 24px!important;
 }
 /*//////////////////////////////////////////////////*/
 /* IMAGE */
@@ -336,23 +345,48 @@ width: 25%;
 #top{
     width: 800px;
 }
-#about{
-    width: 1180px;
+#entry .headline span{
+    font-size: 80px!important;
 }
 #entry p,
 #about p{
     line-height: 160%;
 }
-#about .col1{
-    width: 60%;
-}
-#about .col2{
-    width: 32%;
-}
-#about ul li{
-    list-style-type: none;
-    margin-bottom: 0.5rem;
-}
 #entry .flex{
     gap: 6rem;
+}
+@media (min-width: 1180px) {
+    #about{
+        width: 1180px;
+    }
+}
+@media (min-width: 1024px) {
+    #about{
+        width: 1180px;
+    }
+    #about .col1{
+        width: 60%;
+    }
+    #about .col2{
+        width: 32%;
+    }
+}
+
+.note{
+    padding: 2rem;
+    margin: 4rem 0;
+    font-style: italic;
+}
+.note .btns{
+    margin-top: 1rem;
+}
+
+#entry .col .img {
+    aspect-ratio: 16/9!important;
+    width: 200%; /* 100% of container + 100% overflow */
+    position: relative;
+    display: block;
+}
+#entry .col1 .img {
+    left: -100%;
 }
