--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -31,6 +31,7 @@ a{
 .page-journal blockquote p,
 .page-journal,
 header .close,
+.page-journal .button,
 .page-index .button,
 .page-index .bg-intro,
 .page-index,
@@ -86,6 +87,7 @@ blockquote {
 /*//////////////////////////////////////////////////*/
 /* BORDER COLOR */
 /*//////////////////////////////////////////////////*/
+.note,
 blockquote,
 .button.outline{
     border-style: solid;
@@ -97,6 +99,9 @@ blockquote,
 header .language a{
     border-width: 0 0 1px 0;
 }
+.note{
+    border-width: 1px 0 0 0;
+}
 blockquote{
     border-width: 0 0 0 4px;
 }
@@ -104,12 +109,14 @@ blockquote{
 .button.outline{
     border-color: var(--text-color);
 }
+.page-journal .button,
 .page-index .button.outline{
     border-color: var(--invert-text-color);
 }
 blockquote {
     border-color: var(--border-color);
 }
+.note,
 header .language a{
     border-color: rgba(255, 255, 255, 0.25);
 }
@@ -247,7 +254,6 @@ section{
     padding-top: 8rem;
     padding-bottom: 4rem;
 }
-.page-about #intro,
 footer,
 #showcase{
     padding-top: 4rem;
@@ -293,6 +299,7 @@ header .language a,
 .language.button{
     padding: 0;
 }
+.page-about #intro,
 .page-journal #intro,
 #about{
     padding-top: 1rem;
@@ -302,6 +309,8 @@ header .language a,
 }
 /*/////////////////////////*/
 @media (max-width: 1024px) {
+    .page-about section,
+    .page-about footer,
     .page-journal footer,
     .page-journal #entry,
     .page-journal section,
@@ -309,6 +318,7 @@ header .language a,
         padding-left: 2rem;
         padding-right: 2rem;
     }
+    .page-about,
     .page-journal{
         padding-left: 0!important;
         padding-right: 0!important;
@@ -361,6 +371,7 @@ header .language a,
 .heading{
     margin-bottom: 2rem;
 }
+.headline .flex span,
 blockquote,
 #journal .flex,
 h1,
@@ -380,6 +391,9 @@ p{
 .heading h3{
     margin-bottom: 0.75rem;
 }
+#about ul li{
+    margin-bottom: 0.5rem;
+}
 .brand h1,
 .brand p,
 .container > *:last-child,
@@ -397,6 +411,7 @@ footer .heading{
 #about{
     gap: 4rem;
 }
+#entry .headline .flex,
 .flex{
     gap: 2rem;
 }
@@ -434,6 +449,7 @@ body {
     font-weight: bold;
 }
 /*/////////////////////////*/
+#entry h3,
 #entry h4{
     text-transform: uppercase;
 }
@@ -494,6 +510,9 @@ h2{
 h3{
     font-size: 2rem;
 }
+#entry h3{
+    font-size: 1.3rem;
+}
 h4{
     font-size: 1.15rem;
 }
@@ -510,9 +529,12 @@ dt,
 .button{
     font-size: 1rem;
 }
+.btns.sm .button,
+#about ul li,
+.headline p,
 .button.md,
 small{
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 .button.sm{
     font-size: 0.6rem;
