--- a/boselecta/assets/css/core.css
+++ b/boselecta/assets/css/core.css
@@ -54,30 +54,40 @@ section,
 blockquote p{
     margin: 0!important;
 }
+blockquote.basic{
+    border: 0!important;
+    padding: 0!important;
+}
 /*//////////////////////////////////////////////////*/
 /* HEADER */
 /*//////////////////////////////////////////////////*/
 header{
     width: 1360px;
+    padding: 1rem 0;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    z-index: 1000;
 }
-.page-index header{
+header{
     position: fixed;
     top: 0;
     left: 0;
 }
 header h1{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    margin: 0!important;
+    flex-direction: row;
     align-items: center;
+    gap: 0.6rem;
+    font-weight: 200;
+    padding: 0.4rem 0.4rem 0.4rem 0.8rem;
 }
-header h1 span{
-    width: 70px;
-    height: 70px;
-    line-height: 70px;
-    margin: 0 0 0.5rem 0;
-    font-size: 40px;
+header h1 .img{
+    width: 24px!important;
+    height: 24px!important;
+    margin: 0!important;
+    padding: 0!important;
     display: block;
 }
 header .close{
@@ -196,16 +206,6 @@ a.img-wrap{
 }
 #journal .img-wrap{
     aspect-ratio: 1/1;
-}
-/*//////////////////////////////////////////////////*/
-/* BRAND */
-/*//////////////////////////////////////////////////*/
-.brand{
-    width: 168px;
-    overflow: hidden;
-}
-.brand small{
-    display: block;
 }
 /*//////////////////////////////////////////////////*/
 /* TRANSITION */
@@ -353,11 +353,8 @@ width: 25%;
     transition: transform 0.3s ease-in-out; /* Smooth transition */
 }
 /*//////////////////////////////////////////////////*/
-/* ABOUT */
+/* ENTRY ?? */
 /*//////////////////////////////////////////////////*/
-#top{
-    width: 800px;
-}
 #entry .headline span{
     font-size: 80px!important;
 }
@@ -367,6 +364,54 @@ width: 25%;
 }
 #entry .flex{
     gap: 6rem;
+}
+#entry .col .img {
+    aspect-ratio: 16/9!important;
+    width: 200%; /* 100% of container + 100% overflow */
+    position: relative;
+    display: block;
+}
+#entry .col1 .img {
+    left: -100%;
+}
+/*/////////////////////////*/
+#top{
+    width: 800px;
+}
+/*/////////////////////////*/
+.note{
+    padding: 2rem;
+    margin: 4rem 0;
+    font-style: italic;
+}
+.note .btns{
+    margin-top: 1rem;
+}
+/*//////////////////////////////////////////////////*/
+/* ABOUT */
+/*//////////////////////////////////////////////////*/
+#skills ul{
+    list-style-type: none;
+}
+#skills ul li{
+    padding: 0.5rem 0;
+    font-size: 0.9rem;
+    position: relative;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+}
+#skills ul li:after{
+    content: '';
+    width: 40px;
+    border-width: 1px 0 0 0;
+    border-style: solid;
+    display: block;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+}
+#skills ul{
+    margin-bottom: 2rem;
 }
 @media (min-width: 1180px) {
     #about{
@@ -383,23 +428,4 @@ width: 25%;
     #about .col2{
         width: 32%;
     }
-}
-
-.note{
-    padding: 2rem;
-    margin: 4rem 0;
-    font-style: italic;
-}
-.note .btns{
-    margin-top: 1rem;
-}
-
-#entry .col .img {
-    aspect-ratio: 16/9!important;
-    width: 200%; /* 100% of container + 100% overflow */
-    position: relative;
-    display: block;
-}
-#entry .col1 .img {
-    left: -100%;
 }
