--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -3,13 +3,13 @@
     --primary-color: #315D68;
     --secondary-color: #E6E6EA;
     --accent-color: #D45D3C; /*#88A4AA*/
-    --background-color: #F1F1F3;
+    --background-color: E4EAEC; /*#F1F1F3;*/
     --invert-color: #191919;
     --invert-primary-color: #21282D;
     --invert-secondary-color: #29444C;
     --text-color: #444;
     --light-text-color: #666;
-    --border-color: #CCC;
+    --border-color: #B0BCC2; /*C2C2C7;*/
     --invert-text-color: #E6E0D0;
     /* Dark Mode */
     /*--primary-color: #88A4AA;
@@ -48,7 +48,6 @@ header .close,
 }
 /*/////////////////////////*/
 blockquote p,
-#splash .img,
 .casestudy .content p,
 .heading p,
 #intro .button,
@@ -111,8 +110,15 @@ blockquote{
 .page-index .button.outline{
     border-color: var(--invert-text-color);
 }
+#skills ul li:after{
+    border-color: var(--primary-color);
+}
 blockquote {
     border-color: var(--border-color);
+}
+#skills ul li{
+    border-color: #D1DADC;
+    /*background-color: #F4F8FA;*/
 }
 .note,
 header .language a{
@@ -123,14 +129,12 @@ header .language a{
 /*//////////////////////////////////////////////////*/
 .page-about footer,
 header h1 span,
-.brand small,
 .menu-icon div{
     background-color: #FFF;
 }
 .img{
     background-color: var(--secondary-color);
 }
-.brand h1,
 .button{
     background-color: var(--accent-color);
 }
@@ -163,6 +167,7 @@ header .close,
 /*//////////////////////////////////////////////////*/
 /* GRADIENTS */
 /*//////////////////////////////////////////////////*/
+.brand h1,
 #splash{
     background: linear-gradient(to right, var(--invert-primary-color) 0%,var(--invert-color) 50%);
 }
@@ -193,11 +198,14 @@ header .close,
 #journal .flex::-webkit-scrollbar-thumb{
     background-color: rgba(0, 0, 0, 0.24);
 }
+#skills .img{
+    background-color: transparent!important;
+}
 /*//////////////////////////////////////////////////*/
 /* BORDER RADIUS */
 /*//////////////////////////////////////////////////*/
+header h1,
 header .close,
-header h1 span,
 .button{
     border-radius: 1000px;
 }
@@ -216,10 +224,6 @@ header h1 span,
 }
 #journal .flex::-webkit-scrollbar-thumb {
     border-radius: 2px;
-}
-.brand{
-    border-bottom-left-radius: 16px;
-    border-bottom-right-radius: 16px;
 }
 #splash .img{
     border-radius: 0;
@@ -276,12 +280,6 @@ header,
 #benefits .col{
     padding: 1.5rem;
 }
-.brand h1{
-    padding: 1.5rem 1rem 1rem 1rem;
-}
-.brand small{
-    padding: 0.75rem 1rem;
-}
 .button{
     padding: 0.75rem 1.5rem;
 }
@@ -297,8 +295,11 @@ header .language a,
 .language.button{
     padding: 0;
 }
-#about,
 .page-journal #intro{
+    padding-top: 6rem;    
+}
+#skills,
+#about{
     padding-top: 1rem;
 }
 #entry .container{
@@ -309,9 +310,9 @@ header .language a,
 }
 /*/////////////////////////*/
 @media (min-width: 768px) {
-    .page-about #intro{
+    /*.page-about #intro{
         padding-top: 1rem;
-    }
+    }*/
 }
 @media (max-width: 1024px) {
     .page-about section,
@@ -400,11 +401,9 @@ p{
 .heading h3{
     margin-bottom: 0.75rem;
 }
-#about ul li{
+ul li{
     margin-bottom: 0.5rem;
 }
-.brand h1,
-.brand p,
 .container > *:last-child,
 .heading > *:last-child{
 margin-bottom: 0;
@@ -417,6 +416,7 @@ footer .heading{
 }
 }
 /*//////////////////////////////////////////////////*/
+#skills .flex,
 #about{
     gap: 4rem;
 }
@@ -478,6 +478,7 @@ footer .heading{
     }
 }
 /*/////////////////////////*/
+li,
 #intro p{
     line-height: 150%;
 }
@@ -567,6 +568,10 @@ small{
     width: 100%;
     aspect-ratio: 16/9;
 }
+.img-wrap .img{
+    aspect-ratio:initial;
+    height: 100%;
+}
 #entry .col .img,
 #journal .img{
     aspect-ratio: 1/1;
@@ -602,6 +607,7 @@ small{
 .img{
     background-size: 100% auto;
 }
+#skills .img,
 #splash .img,
 .casestudy .img{
     background-size: auto 100%;
