--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -302,6 +302,7 @@ header .language a,
 #about{
     padding-top: 1rem;
 }
+.page-journal #intro,
 #entry .container{
     padding-bottom: 0;
 }
@@ -407,7 +408,7 @@ p{
 .heading h3{
     margin-bottom: 0.75rem;
 }
-ul li{
+ol li, ul li{
     margin-bottom: 0.5rem;
 }
 .container > *:last-child,
