--- a/boselecta/assets/css/core.css
+++ b/boselecta/assets/css/core.css
@@ -115,6 +115,7 @@ header .close{
 }
 /*/////////////////////////*/
 @media (max-width: 440px) {
+    .page-casestudy header,
     .page-journal header{
         height: 80px;
     }
